Edit copy to include project proposal and payment system integration for HEK

--- a/co-creation-lab/hek.html
+++ b/co-creation-lab/hek.html
@@ -89,16 +89,17 @@ excerpt: "Helping Basel’s HEK build digital community with the world’s first
         ground
       </h4>
       <p class="pb3 f3 lh-copy measure-wide">
-        As the partnership kicked off, Hypha’ worked with HEK to:
+        As the partnership kicked off, Hypha worked with HEK to condense their project proposal, which had taken HEK
+        “months, years even, of internal discussion” to create. Identifying HEK’s key motivations meant:
       </p>
 
       <ol class="f3 measure-wide">
         <li>
-          Deepen the team’s Web3 knowledge beyond the basics into its technical
+          Deepening the team’s Web3 knowledge beyond the basics into its technical
           aspects and culture
         </li>
         <li>
-          Ask questions to uncover true needs, priorities, and hidden
+          Asking questions to uncover true needs, priorities, and hidden
           assumptions behind HEK’s project proposal
         </li>
       </ol>
@@ -133,11 +134,10 @@ excerpt: "Helping Basel’s HEK build digital community with the world’s first
         still pay with “a good old credit card” in addition to Ethereum.
       </p>
       <p class="pb3 f3 lh-copy measure-wide">
-        There are many providers that enable the sale of NFTs via traditional
-        payment methods, but none of them worked well with the payment systems
-        HEK was already using. To find the most reliable way forward, Hypha
-        presented different options while informing HEK about the tradeoffs they
-        entailed so the HEK team could make the best choice.
+        There are many providers that enable the sale of NFTs via traditional payment methods, but none of them worked
+        well with the payment systems HEK was already using. To find the most reliable way forward, Hypha presented
+        different options while informing HEK about the tradeoffs they entailed so the HEK team could make the best
+        choice.
       </p>
       <blockquote class="f3 measure mb5">
         <em>
