Include FoH logo in case study

--- a/co-creation-lab/hek.html
+++ b/co-creation-lab/hek.html
@@ -2,6 +2,7 @@
 layout: default
 title: Friends of HEK
 excerpt: "Helping Basel’s HEK build digital community with the world’s first tokenized museum membership"
+image: "/assets/images/friends-of-hek.webp"
 ---
 
 <section class="mt4 ph3 pl5-l">
@@ -15,6 +16,9 @@ excerpt: "Helping Basel’s HEK build digital community with the world’s first
         </h3>
         <div class="f3 measure-wide dark-gray lh-copy mb0">
           <h4 class="f3 measure-wide mb0">{{ page.excerpt}}</h4>
+          <div class='flex items-center justify-center'>
+            <img class="w-100" src="{{ '/assets/images/friends-of-hek.webp' | relative_url }}" alt="Friends of HEK logo in bold black text with stylized letters, overlaid on a flowing, dotted, multicolored abstract background."/>
+          </div>
         </div>
       </div>
     </div>
