Add SVG diagram and alt-text to Data Provenance page

--- a/data-provenance.html
+++ b/data-provenance.html
@@ -3,6 +3,8 @@ layout: practice_area
 title: Data Provenance
 excerpt: "Where cryptography innovations meet the most defining issues of our time"
 image: "/assets/images/social/data-provenance.webp"
+diagram: "assets/images/data-provenance.svg"
+diagram_alt_text: "A diagram illustrating the Data Provenance practice area. Arrows extend from 'Data Provenance' to several related areas, including 'AI Lineage,' 'Data Integrity,' 'Verifiable Supply Chain,' and 'Verifiable Computing.' Additional elements include 'Digital Asset Authentication,' 'Decentralized Preservation,' and 'Verifiable Computing Connection'."
 description:
 tagline: "Enabling decentralized trust models and equitable AI innovations rooted in multistakeholder governance."
 services:
