Use project template in work page and practice_area template

--- a/work.html
+++ b/work.html
@@ -46,46 +46,8 @@ order: 3
       </div>
       <div class="flex flex-wrap">
         {% assign works = matching_practice_area.first.items %}
-        {% for work in works %}
-       
-          <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
-            <div class="relative mb4">
-              <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo">
-              {% if work.logo %}
-                <img class="absolute top-0 left-0" src="{{ work.logo }}" alt="logo">
-              {% else %}
-                <p class="absolute top-0 left-0 tc mt5 w-100 white f1 v-mid"><b>{{ work.title }}</b></p>
-              {% endif %}
-            </div>
-            <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
-            <div
-              class="mb2 f4 lh-copy"
-              id="{{ work.title }}"
-            >
-              <div 
-                class="project-content"
-                data-excerpt="{{ work.excerpt | escape }}"
-                data-content="{{ work.content | escape }}"
-                data-case-study="{% if work.case_study %}{% assign practice_slug = '' %}{% for practice in index_page.what_we_do %}{% if practice.title == work.practice_area %}{% assign practice_slug = practice.slug %}{% endif %}{% endfor %}{% if practice_slug %}<a href='/{{ practice_slug }}/{{ work.case_study }}/' class='accent link underline-hover mb4'>Read the case study</a>{% endif %}{% endif %}"
-                data-toggled="false"
-              >
-                {{ work.excerpt | markdownify }}
-              </div>
-              {% if work.content contains "<!-- more -->" %}
-                <div class="mt2">
-                  <span class="mv0 link accent pointer underline-hover w-fit"
-                    tabindex="0"
-                    role="button"
-                    aria-expanded="false"
-                    onclick="expandContent(this)"
-                    onkeydown="handleKeydown(event, this)"
-                  >
-                    [read more]
-                  </span>
-                </div>
-              {% endif %}
-            </div>
-          </div>
+        {% for project in works %}
+          {%- include sections/project.html project=project -%}
         {% endfor %}
       </div>
     {% endif %}
