Add culturestake logo and subtitle and include in case study

--- a/co-creation-lab/furtherfield.html
+++ b/co-creation-lab/furtherfield.html
@@ -2,6 +2,7 @@
 layout: default
 title: CultureStake
 excerpt: "Putting the “public” back in “public art” in one North London park and beyond"
+image: "/assets/images/culturestake-logo.webp"
 ---
 
 <section class="mt4 ph3 pl5-l">
@@ -15,6 +16,9 @@ excerpt: "Putting the “public” back in “public art” in one North London 
         </h3>
         <div class="f3 measure-wide dark-gray lh-copy mb0">
           <h4 class="f3 measure-wide mb0">{{ page.excerpt}}</h4>
+          <div class='flex items-center justify-center'>
+            <img class="w-100" src="{{ '/assets/images/culturestake-subtitle.webp' | relative_url }}" alt="The phrase 'Collective Cultural Decision-making' is displayed in all uppercase, using a monospaced font."/>
+          </div>
         </div>
       </div>
     </div>
