--- a/co-creation-lab/furtherfield.html
+++ b/co-creation-lab/furtherfield.html
@@ -28,7 +28,7 @@ image: "/assets/images/culturestake-logo.webp"
   >
     <div class="relative mb4">
       <p class="pb3 f3 lh-copy measure-wide">
-        Furtherfield is an art gallery that’s been uniquely located in the heart
+        <a href="https://www.furtherfield.org/"> Furtherfield</a> is an art gallery that’s been uniquely located in the heart
         of North London’s Finsbury Park since 2011. When COVID made its indoor
         space unmanageable, the Furtherfield team took it as an opportunity to
         reset its relationship with the Finsbury community. As a result, they
@@ -41,14 +41,14 @@ image: "/assets/images/culturestake-logo.webp"
         blockchain
       </h4>
       <p class="pb3 f3 lh-copy measure-wide">
-        Formed in response to the celebrity and commercialization of London’s
-        YBA scene in the 90’s, for almost three decades Furtherfield has
+        Formed in response to the celebrity and commercialization of <a href=" https://www.tate.org.uk/art/art-terms/y/young-british-artists-ybas"> London’s
+        YBA scene</a> in the 90’s, for almost three decades Furtherfield has
         embodied the grassroots DIY culture of the early internet for artists.
         Even though the pandemic was the catalyst for CultureStake, the team had
         been ready to make a change. “We had a growing feeling that bringing art
         from our international network into this public space was us bestowing
         ‘good culture’ on a locality, and we were becoming increasingly
-        uncomfortable with it,” co-founder Ruth Catlow explains. “We wanted to
+        uncomfortable with it,” co-founder <a href= "https://ruthcatlow.net/"> Ruth Catlow </a> explains. “We wanted to
         work more with the different communities that used this space to see how
         they might shape our programs and our organization, and realized we
         could ask them directly about what was important to them.”
@@ -64,7 +64,7 @@ image: "/assets/images/culturestake-logo.webp"
         As longtime followers of open source and peer-to-peer technologies, and
         as explorers of how emerging tech impacts society, the Furtherfield team
         knew they wanted to incorporate two specific decentralized tools into
-        CultureStake:
+        <a href="https://www.furtherfield.org/culturestake/"> CultureStake</a>:
       </p>
       <ol class="f3 measure-wide">
         <li>
@@ -91,8 +91,8 @@ image: "/assets/images/culturestake-logo.webp"
 
       <p class="pb3 f3 lh-copy measure-wide">
         For CultureStake’s first iteration, Furtherfield commissioned artist and
-        developer Sarah Friend and later brought in fellow co-op Common
-        Knowledge to work on its design and frontend. But when it came to the
+        developer <a href="https://isthisa.com/"> Sarah Friend</a> and later brought in fellow co-op <a href= "https://commonknowledge.coop/practices/" Common
+        Knowledge </a> to work on its design and frontend. But when it came to the
         more challenging backend work of connecting the app to the blockchain,
         both Sarah and the firm recommended Hypha. At first, Furtherfield was
         nervous about handing the project to a new partner. Says Ruth, ”We were
@@ -121,7 +121,7 @@ image: "/assets/images/culturestake-logo.webp"
       <p class="pb3 f3 lh-copy measure-wide">
         As Furtherfield “turned the gallery inside out,” bringing art from the
         gallery to the park, they used CultureStake to cede creative control to
-        the people. Calling the project People’s Park Plinth, Furtherfield
+        the people. Calling the project <a href="https://www.furtherfield.org/peoples-park-plinth/"> People’s Park Plinth </a>, Furtherfield
         commissioned a series of small extended reality artworks. Finsbury’s
         50,000 visitors a week could then use CultureStake to scan QR codes and
         view the works throughout the park. They then could use CultureStake to
@@ -158,7 +158,7 @@ image: "/assets/images/culturestake-logo.webp"
       <p class="pb3 f3 lh-copy measure-wide">
         “Testing all the promises of democratization in the blockchain space
         against reality” was something Ruth had been wanting to do ever since
-        Furtherfield board member Rhea Myers started “issuing provocations on
+        Furtherfield board member <a href="https://rhea.art/"> Rhea Myers</a> started “issuing provocations on
         decentralized autonomous organizations that were impossible to ignore,
         long before the NFT boom.” To her, blockchain may not be essential to
         making cultural democracy happen. But Ruth feels it’s important to keep
