--- a/work.html
+++ b/work.html
@@ -38,7 +38,14 @@ order: 3
         <h2 class="f2 sans-serif accent mb3 mt4">
           {{ practice.title }}
         </h2>
-          {% if practice.slug %}
+        {% if practice.slug %}
+          {% capture practice_page_path %}{{ practice.slug }}.html{% endcapture %}
+          {% assign practice_page = site.pages | where: "path", practice_page_path | first %}        
+          {% if practice_page %}
+            <p class="measure-wide mt2 mb2 f3">
+              {{ practice_page.excerpt }}
+            </p>
+          {% endif %}
           <p class="measure-wide mt2 mb2">
             <a href="/{{ practice.slug }}/" class="accent link underline-hover">Read more</a>
           </p>
