Increase font size

--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@ order: 3
               {{ practice_page.excerpt }}
             </p>
           {% endif %}
-          <p class="measure-wide mt2 mb2">
+          <p class="measure-wide mt2 mb2 f3">
             <a href="/{{ practice.slug }}/" class="accent link underline-hover">Read more</a>
           </p>
           {% endif %}
