Fix 404 on dripline.html

--- a/dripline.html
+++ b/dripline.html
@@ -27,7 +27,7 @@ order: 4
               A dripline signifies the area under the outermost branches of a
               tree. It’s this
               <a
-                href="https://permacultureprinciples.com/principles/_11/"
+                href="https://permacultureprinciples.com/permaculture-principles/_11/"
                 target="_blank"
                 class="accent link underline-hover"
                 rel="noopener"
