--- a/dripline.html
+++ b/dripline.html
@@ -43,7 +43,7 @@ order: 4
   {%- if posts.size > 0 -%}
   <article class="flex flex-wrap justify-center">
     {%- assign date_format = site.date_format -%} {%- for post in posts -%}
-    <div class="bg-white measure pv3 pr6-l pl0-l pr0-s pl0-s center mb4 db">
+    <div class="bg-white measure pv3 pr6-l pl0-l pr0-s pl0-s center mb4 db w-fill-available">
       <a class="no-underline" href="{{ post.url | relative_url }}">
         <h3
           class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"
