Replace `Network` with `Interchain`

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Home
 layout: default
 order: 1
 what_we_do:
-  - title: Network Operations
+  - title: Interchain Operations
     description: As core contributors to the Cosmos ecosystem, we've been building products and programs for the Interchain since 2021. 
     slug: "network-operations"
     order: 3
