--- a/network-operations.html
+++ b/network-operations.html
@@ -1,6 +1,6 @@
 ---
 layout: practice_area
-title: Network Operations
+title: Interchain Operations
 excerpt: "Coordinating humans and technology to deliver reliable decentralized networks"
 image: "/assets/images/social/network-operations-i.webp"
 diagram: "assets/images/network-operations.webp"
