update interchain related assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ order: 1
 what_we_do:
   - title: Interchain Operations
     description: As core contributors to the Cosmos ecosystem, we've been building products and programs for the Interchain since 2021. 
-    slug: "network-operations"
+    slug: "interchain-operations"
     order: 3
   - title: Data Provenance
     description: We enable decentralized trust models and equitable AI innovations rooted in multistakeholder governance and applied cryptography.
