--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -3,6 +3,7 @@ layout: practice_area
 title: Co-Creation Lab
 excerpt: "A vision for reclaiming tech for arts, culture, and activism through holistic co-creation"
 image: "/assets/images/social/c-lab.webp"
+diagram: "assets/images/c-lab.svg"
 description: 
 
 tagline: "We're dedicated to fostering access, autonomy, and sustainability in all our projects."
