Refactor dropdown to dynamically generate items from `work_menu_title` attribute

--- a/data-provenance.html
+++ b/data-provenance.html
@@ -1,6 +1,7 @@
 ---
 layout: practice_area
 title: Data Provenance
+work_menu_title: true
 excerpt: "Where cryptography innovations meet the most defining issues of our time"
 image: "/assets/images/social/data-provenance.webp"
 diagram: "assets/images/data-provenance.svg"
