--- a/interchain-operations.html
+++ b/interchain-operations.html
@@ -1,6 +1,7 @@
 ---
 layout: practice_area
 title: Interchain Operations
+work_menu_title: true
 excerpt: "Coordinating humans and technology to deliver reliable decentralized networks"
 image: "/assets/images/social/interchain-operations-i.webp"
 diagram: "assets/images/interchain-operations.webp"
