--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -1,6 +1,7 @@
 ---
 layout: practice_area
 title: Co-Creation Lab
+work_menu_title: true
 excerpt: "A vision for reclaiming tech for arts, culture, and activism through holistic co-creation"
 image: "/assets/images/social/c-lab.webp"
 diagram: "assets/images/c-lab.svg"
