Refactor heading levels for consistency and improve layout spacing

--- a/people.html
+++ b/people.html
@@ -13,9 +13,9 @@ order: 2
 <div class="flex-l items-center mv2">
   <div class="w-100-l">
     
-    <h3 class=" f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
+    <h2 class=" f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid mt6-ns mt5">
       {{ page.title }}
-    </h3>
+    </h2>
     <p class="f3 measure-wide dark-gray lh-copy mb5">
     As a non-profit worker co-operative, Hypha strives to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
     </p>
