--- a/work.html
+++ b/work.html
@@ -12,9 +12,9 @@ order: 3
   <div class="flex-l items-center mv2 ">
     <div class="w-100-l">
       
-      <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
+      <h2 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid mt6-ns mt5">
         {{ page.title }}
-      </h3>
+      </h2>
       <div class="f3 measure-wide dark-gray lh-copy mb5">
         <p class="f4">
           <em>
@@ -38,9 +38,9 @@ order: 3
         {% if practice.slug %}
           <a href="/{{ practice.slug }}/" class="underline-hover">
         {% endif %}
-        <h2 class="f2 sans-serif accent mb3 mt4">
+        <h3 class="f2 sans-serif accent mb3 mt4">
           {{ practice.title }}
-        </h2>
+        </h3>
         {% if practice.slug %}
           </a>
         {% endif %}
