--- a/cosmos.html
+++ b/cosmos.html
@@ -7,13 +7,13 @@ permalink: '/doescosmos/'
 
 {% assign posts = site.cosmos | reverse %}
 
-<section class="mt4 ph3 pl5-l ">
+<section class="mt2 ph3 pl5-l ">
     <header class="">
         <div class="flex-l items-center mv0">
             <div class="w-100-l mb5">
-                <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
+                <h2 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid mt6-ns mt5">
                     {{ page.title }}
-                </h3>
+                </h2>
                 <div class="f3 measure-wide dark-gray lh-copy mb0">
                     <p class="f3">
                         Hypha writes about our work in the Cosmos ecosystem
