create newsletter.html and add it to index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ our_services:
     description: We don’t just build tech, we build systems — and help run the teams, processes, communications, and user relationships that make them function.
 ---
 {%- include sections.html path="about.html" class="" -%}
+{%- include sections.html path="newsletter.html" class="mv5" -%}
 {%- include sections.html path="what-we-do.html" class="" -%}
 {%- include sections.html path="our-values.html" class="" -%}
 {%- include sections.html path="our-services.html" class="" -%}
