a11y: visual distinction on links

--- a/dripline.html
+++ b/dripline.html
@@ -29,7 +29,7 @@ order: 4
               <a
                 href="https://permacultureprinciples.com/permaculture-principles/_11/"
                 target="_blank"
-                class="accent link underline-hover"
+                class="accent link"
                 rel="noopener"
                 >interface</a
               >
@@ -46,7 +46,7 @@ order: 4
     <div class="bg-white measure pv3 pr6-l pl0-l pr0-s pl0-s center mb4 db w-fill-available">
       <a class="no-underline" href="{{ post.url | relative_url }}">
         <h3
-          class="f3 mt0 mb2 sans-serif normal accent link underline-hover lh-title"
+          class="f3 mt0 mb2 sans-serif normal accent link lh-title"
         >
           {{ post.title | escape }}
         </h3>
