update CCL service titles and descriptions

--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -8,24 +8,15 @@ diagram: "assets/images/c-lab.svg"
 diagram_alt_text: "A diagram illustrating the Co-Creation Lab practice area. At the center is a large circle labeled 'Co-Creation Lab,' with arrows extending outward to several related areas. On the left, three smaller circles represent 'Art,' 'Culture,' and 'Activism.' On the right, three larger circles represent 'Sustainability,' 'Autonomy,' and 'Access.' The diagram uses a bold purple color scheme, with varying circle sizes emphasizing different focus areas."
 description: 
 
-tagline: "We're dedicated to fostering access, autonomy, and sustainability in all our projects."
+tagline: "We're dedicated to fostering access, autonomy, and sustainability in all our projects. Pragmatic implementation; not just AI everything."
 services:
-  - title: Project design & discovery
+  - title: Fixing the mess, with a human-first approach
     description: 
-      - "Drawing on a human-centered design approach, we offer in-depth strategic planning to build a solid foundation for each project. We'll collaborate with you to scope out general needs and to translate those into specific milestones that can be incrementally built and tested."
-    
-  - title: Software delivery at all project lifecycle stages
+      - "Building flexible strategies for small and medium-sized organizations to implement new tools and processes, both person-centered and automated by AI. Capacity building that’s rooted in the requirements and realities of your organization, and draws on our systems thinking and governance expertise."
+  - title: Co-imaging technology implementation
     description: 
-      - "We can help with rapid prototyping and MVP development, long-term iterative software development, building product roadmaps, gathering user feedback, and week-to-week project management and coordination. We also have in-house expertise in Web Accessibility."
-    list:
-      - Our primary focus is on dynamic web applications and static websites but have experience working with mobile and desktop app teams
-      - Our team has deep expertise in building and deploying distributed and decentralized applications across a variety of use cases. We can help you navigate trade-offs between technologies to choose the right protocol for the job
-      - We have successfully deployed smart contracts in a variety of blockchain ecosystems, and have in-house expertise in data oracles
-  - title: Technical education
+      - "Design and discovery for technology projects of all sizes. Full-stack software development, API integrations, decentralized infrastructure, and AI-flavoured options. Smart contracts and blockchain wizardry. Tool agnostic, collaborative support for your existing technical team or let us take the lead."
+  - title: A translation partner for emerging technology
     description: 
-      - "We have a track record of producing technical documentation, experience reports, resources for emerging and established technologies, and general digital literacy initiatives."
-      - "Team members present at conferences and events and are skilled in translating complex technical concepts into simpler language."
-  - title: Governance
-    description: 
-      - "Leveraging both our co-operative governance expertise and our experience with DAOs (Decentralized Autonomous Organizations), we advise on how to productively engage communities and pass proposals and resolutions by fostering healthy debate and dialogue."
+      - "Support with writing documentation, technical briefs and case studies, with an understanding of privacy and accessibility issues for data sensitive organizations. Technical advice for grant applications from smart, nice people with lived experiences in government and the arts and cultural sector."
 ---
