--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@ our_services:
 {%- include sections.html path="our-services.html" class="" -%}
 {%- include sections.html path="who-we-are.html" class="" -%}
 {%- include sections.html path="about-dripline.html" class="" -%}
-{%- include sections.html path="newsletter.html" class="mv5" -%}
-{%- include sections.html path="work-with-us.html" class="mv5" -%}
+{%- include sections.html path="newsletter.html" class="" -%}
+{%- include sections.html path="work-with-us.html" class="" -%}
