Finalize homepage layout: fix spacing, alignment, and footer

--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@ our_services:
 {%- include sections.html path="case-studies.html" class="" -%}
 {%- include sections.html path="techniques.html" class="" -%}
 {%- include sections.html path="who-we-are.html" class="" -%}
-{%- include sections.html path="work-with-us.html" class="mv5" -%}
-{%- include sections.html path="newsletter.html" class="mv5" -%}
+{%- include sections.html path="work-with-us.html" class="" -%}
+{%- include sections.html path="newsletter.html" class="" -%}
