--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@ order: 3
             Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus.
           </em> 
         </p>
-        In ecology, hyphae provide sustenance and communication between living organisms. Drawing inspiration from this infinitely adaptive, complex structure, we bring these traits to our work: rooted in knowledge, yet boundless in imagination.
+        We work with organizations building more trustworthy, democratic digital systems. From war crimes documentation to cooperative infrastructure to AI governance, here's what we've been building.
       </div>
     </div>
   </div>
