remove Greek reference

--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Work
+excerpt: "We work with organizations building more trustworthy, democratic digital systems."
 image: "/assets/images/social/work.webp"
 menu_title: Work
 order: 3
@@ -15,11 +16,6 @@ order: 3
         {{ page.title }}
       </h3>
       <div class="f3 measure-wide dark-gray lh-copy mb5">
-        <p class="f4">
-          <em>
-            Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus.
-          </em> 
-        </p>
         We work with organizations building more trustworthy, democratic digital systems. From war crimes documentation to cooperative infrastructure to AI governance, here's what we've been building.
       </div>
     </div>
