--- a/dripline.html
+++ b/dripline.html
@@ -51,11 +51,11 @@ order: 4
           {{ post.title | escape }}
         </h3>
       </a>
-      <p class="mt0 f5 mb2 measure lh-copy">{{ post.excerpt }}</p>
-      <h4 class="f5 fw6 gray mt0 mb3">
+      <h4 class="f5 fw6 gray mt0">
         {%- if post.author != "Hypha" -%}{{ post.author }},&nbsp;{%- endif -%}{{
         post.date | date: date_format }}
       </h4>
+      <p class="mt0 f5 mb3 measure lh-copy">{{ post.excerpt }}</p>
     </div>
     {%- endfor -%}
   </article>
