--- a/work.html
+++ b/work.html
@@ -8,25 +8,33 @@ order: 3
 ---
 
 <section class="mt2 ph3 ph5-l">
-<header>
-  <div class="flex-l items-center mv2 ">
-    <div class="w-100-l">
-      
-      <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
-        {{ page.title }}
-      </h3>
-      <div class="f3 measure-wide dark-gray lh-copy mb5">
-        We work with organizations building more trustworthy, democratic digital systems. From war crimes documentation to cooperative infrastructure to AI governance, here's what we've been building.
+  <header>
+    <div class="flex-l items-center mv2 ">
+      <div class="w-100-l">
+
+        <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">
+          {{ page.title }}
+        </h3>
+        <div class="f3 measure-wide dark-gray lh-copy mb5">
+          We work with organizations building more trustworthy, democratic digital systems. From war crimes
+          documentation to cooperative infrastructure to AI governance, here's what we've been building.
+        </div>
       </div>
     </div>
+  </header>
+  {% for category in site.data.work_categories %}
+  <div class="w-100 mb4">
+    <h2 class="f3 f2-m f1-l normal mb4">{{ category.name }}</h2>
+    <div class="flex flex-wrap justify-left">
+      {% for project_slug in category.projects %}
+      {% assign project = site.work | where: "slug", project_slug | first %}
+      {% if project %}
+      {%- include sections/project.html project=project -%}
+      {% endif %}
+      {% endfor %}
+    </div>
   </div>
-</header>
-<div class="flex flex-wrap justify-left mb4 pv4">
-  {% assign sorted_projects = site.work | sort: 'title' %}
-  {% for project in sorted_projects %}
-    {%- include sections/project.html project=project -%}
   {% endfor %}
-</div>
 </section>
 
 <script>
